# wb_rag

./: .gitignore  .ruff.toml  pyproject.toml
src/wb_rag/presentation/cli/: main.py
src/wb_rag/presentation/cli/chroma_data/: chroma.sqlite3
src/wb_rag/rag/: config.py  ingest.py  retriever.py  utils.py
src/wb_rag/rag/data/: strategy_podderzhanie_prodazh.txt
