[tool.poetry]
name = "wb-rag"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.17.1"
ruff = "^0.12.11"
pre-commit = "^4.3.0"
rich = "^14.1.0"
chromadb = "^1.0.20"
sentence-transformers = "^5.1.0"
rank-bm25 = "^0.2.2"
openai = "^1.103.0"
miro-api = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
